Course XI - unit 05 - 381 to 383. Unit 06 - 384 to 386. HTML e PHP interagindo com MySql.

--- a/Exercicios Limpos PHP intergracao MySQL/public/unidade_04/_css/produtos.css
+++ b/Exercicios Limpos PHP intergracao MySQL/public/unidade_04/_css/produtos.css
@@ -20,6 +20,7 @@ main div#listagem_produtos li {
 main div#listagem_produtos li.imagem {
     float:left;
     margin-right: 10px;
+    border-radius: 6px;   
 }
 
 main div#listagem_produtos li h3 {
